--- a/_posts/2011-08-23-test.markdown
+++ b/_posts/2011-08-23-test.markdown
@@ -12,3 +12,5 @@ Sed et lorem orci. Nullam consectetur elementum nibh, at aliquam metus adipiscin
         doc={"id":123}
         print doc
 {% endhighlight %}
+
+CREATE USER alex WITH PASSWORD '1qasw2';
