--- a/_posts/2013-08-08-torcast.markdown
+++ b/_posts/2013-08-08-torcast.markdown
@@ -44,7 +44,7 @@ Redis数据库连接上了后需要select db，和subscribe这两个必要的操
 
     {% highlight python %}
     def parseCommand(*argv):
-        output = [["*",str(len(argv)),"\r\n"]] + [["$",str(len(p)),"\r\n",p,"\r\n"] for p in map(str,argv)] + [["\r\n",""]]
+        output = [["*",str(len(argv)),"\r\n"]] + [["$",str(len(p)),"\r\n",p,"\r\n"] for p in map(str,argv)]
         return "".join(reduce(lambda i1,i2:i1+i2 ,output))
     {% endhighlight %}   
             
